# qartez-mcp

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  cla.yml  codeql.yml  deny.yml  release.yml
benchmarks/: README.md  fixtures.toml
docs/: agent-guide.md  architecture.md  configuration.md  tools.md
qartez-dashboard/: Cargo.toml  build.rs
qartez-dashboard/src/: auth.rs  cli.rs  daemon.rs  discovery.rs  embed.rs  indexer.rs  lib.rs  paths.rs  server.rs  state.rs  watcher.rs  ws.rs
qartez-dashboard/src/api/: clones.rs  db_introspect.rs  dead_code.rs  focused_file.rs  focused_symbol.rs  graph.rs  graph_diff.rs  handler_util.rs  health.rs  hotspots.rs  limits.rs  mod.rs  project.rs  project_health.rs  reindex.rs  shutdown.rs  smells.rs  symbol_cochanges.rs  symbol_graph.rs  symbol_search.rs
qartez-dashboard/web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
qartez-dashboard/web/src/: app.css
qartez-dashboard/web/src/lib/: api.ts  index.ts  types.ts  ws.svelte.ts
qartez-dashboard/web/src/lib/components/: EmptyState.svelte  FocusPanel.svelte  SymbolPanel.svelte
qartez-dashboard/web/src/lib/map/: colors.ts  force-graph.ts  symbol-colors.ts
qartez-dashboard/web/src/routes/: +layout.svelte  +page.svelte
qartez-dashboard/web/src/routes/clones/: +page.svelte
qartez-dashboard/web/src/routes/dead-code/: +page.svelte
qartez-dashboard/web/src/routes/health/: +page.svelte
qartez-dashboard/web/src/routes/hotspots/: +page.svelte
qartez-dashboard/web/src/routes/map/: +page.svelte
qartez-dashboard/web/src/routes/settings/: +page.svelte
qartez-dashboard/web/src/routes/smells/: +page.svelte
qartez-dashboard/web/src/routes/symbols/: +page.svelte
reports/: benchmark.json  benchmark.md
scripts/: AGENTS.md.snippet  CLAUDE.md.snippet  GEMINI.md.snippet  cursor-rule.mdc  instructions.md  opencode-plugin.ts  qartez-guard.sh  qartez-session-start.sh  setup-benchmark-fixtures.sh
scripts/skill/: SKILL.md
src/: cli.rs  cli_runner.rs  config.rs  embeddings.rs  error.rs  guard.rs  lib.rs  lock.rs  main.rs  str_utils.rs  test_paths.rs  toolchain.rs  watch.rs
src/benchmark/: grounding.rs  judge.rs  mod.rs  report.rs  scenarios.rs  set_compare.rs  sim_runner.rs  targets.rs  tokenize.rs
src/git/: blame.rs  cochange.rs  diff.rs  knowledge.rs  mod.rs  trend.rs
src/graph/: blast.rs  boundaries.rs  leiden.rs  mod.rs  pagerank.rs  security.rs  wiki.rs
src/index/: fingerprint.rs  mod.rs  parser.rs  symbols.rs  walker.rs
src/server/: cache.rs  helpers.rs  mcp_instructions.md  mod.rs  overview.rs  params.rs  prompt_tests.rs  prompts.rs  quality_tests.rs  tiers.rs  treesitter.rs
src/storage/: maintenance.rs  mod.rs  models.rs  read.rs  schema.rs  write.rs
tests/: add_root.rs  business_logic.rs  c_include_edges.rs  cli_integration.rs  cross_process_lock.rs  fp_regression_2026_04_23_full.rs  fp_regression_analysis_scoping.rs  fp_regression_analysis_verification.rs  fp_regression_audit_2026_04_24.rs  fp_regression_audit_2026_04_25_messages.rs  fp_regression_calls_refs_accuracy.rs  fp_regression_clones_smells.rs  fp_regression_compound_surfaces_2026_04_25.rs  fp_regression_final_audit_2026_04_25.rs  fp_regression_high_batch_validation.rs  fp_regression_low_batch_april_23.rs  fp_regression_maintenance_audit_2026_04_25.rs  fp_regression_medium_validation_batch.rs  fp_regression_mermaid_reject.rs  fp_regression_meta_audit_2026_04_25.rs  fp_regression_minor_uiux.rs  fp_regression_nav_search.rs  fp_regression_pagination_audit_2026_04_25.rs  fp_regression_query_verification.rs  fp_regression_refactor_audit_2026_04_25.rs  fp_regression_refactor_disambiguation.rs  fp_regression_refactor_safety_verification.rs  fp_regression_report_april_2026.rs  fp_regression_security_refs.rs  fp_regression_structure_tools.rs  fp_regression_test_gaps.rs  fp_regression_tool_batch_april_23.rs  fp_regression_tool_batch_deep.rs  fp_regression_tool_semantic_bugs.rs  fp_regression_trait_rename.rs  fp_regression_unused.rs  fp_regression_validation_uiux.rs  fp_regression_validation_verification.rs  fp_regression_workspace_audit_2026_04_25.rs  fp_regression_workspace_fingerprint.rs  (+14 more)
(+98 files in other folders)
