[package]
name = "qartez-mcp"
version = "0.9.4"
edition = "2024"
rust-version = "1.88"
description = "MCP server for codebase intelligence - tree-sitter indexing, PageRank, blast radius"
license-file = "LICENSE"
repository = "https://github.com/kuberstar/qartez-mcp"
homepage = "https://qartez.dev"
authors = ["Kuberstar <hello@qartez.dev>"]
readme = "README.md"
keywords = ["mcp", "claude", "code-analysis", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = []
benchmark = ["dep:tiktoken-rs", "dep:glob"]
semantic = ["dep:ort", "dep:tokenizers"]

[[bin]]
name = "qartez"
path = "src/main.rs"

[[bin]]
name = "qartez-guard"
path = "src/bin/guard.rs"

[[bin]]
name = "qartez-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["benchmark"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
fs4 = "0.13"
git2 = { version = "0.20.4", default-features = false }
glob = { version = "0.3", optional = true }
globset = "0.4"
ignore = "0.4.25"
notify = "8"
regex = "1.11"
rmcp = { version = "1.4.0", features = ["server", "transport-async-rw"] }
rusqlite = { version = "0.39.0", features = ["bundled-full"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
thiserror = "2.0.18"
tiktoken-rs = { version = "0.6", optional = true }
tokio = { version = "1.51.1", features = ["full"] }
toml_edit = { version = "0.22", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tree-sitter = "0.26.8"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-hcl = "1.1.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.4"
tree-sitter-ruby = "0.23.0"
tree-sitter-bash = "0.23.3"
tree-sitter-css = "0.23.2"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-make = "1.1"
tree-sitter-toml-ng = "0.7"
tree-sitter-nginx = "1.0"
tree-sitter-proto = "0.4"
tree-sitter-lua = "0.5"
tree-sitter-scala = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-zig = "1.1"
tree-sitter-nix = "0.3"
tree-sitter-groovy = "0.1"
tree-sitter-dart = "0.1"
tree-sitter-haskell = "0.23.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-r = "1.2.0"

ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
unreachable_pub = "warn"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
